corrected spacing and h1 change

--- a/main.css
+++ b/main.css
@@ -6,22 +6,16 @@ img {
     max-width: 200px;
     border-radius: 25%;
 }
-
 .img-center {
     margin: 0 auto;
 }
-
 .spanImg{
     min-width: 75%;
     max-width: 100%; 
 }
-
 .aboutBody{
-   margin: 100px; 
-    color: red;
     text-align: center;
 }
-
-.aboutP{
-    color: gray;
+h1{
+    color: white;
 }
